--- a/rise3.html
+++ b/rise3.html
@@ -26,12 +26,12 @@
     <h1>Aam3</h1>  </h1>
     </div>
     <div class="imagecenter">
-    <img src="/images/theskin.jpg" width="600px">
+    <img src="images/theskin.jpg" width="600px">
 </div>  
 <br>
 <p>This is my account </p>
  <div class="imagecenter">
-    <img src="/images/aam3.jpg" width="600px">
+    <img src="images/aam3.jpg" width="600px">
 </div>
 <br>
 <div class="imagecenter">
@@ -39,12 +39,12 @@
 </div>
 
 <p>I have worked on my account for the past 3 years as a free to play player , many people when they first start off don't really understand the the strategy on how to upgrade thie cities .so i'm going to give you a quick rundown on the best way to upgrade your city .</p>
-<img src="/images/city.PNG " width="600px">
+<img src="images/city.PNG " width="600px">
 </div>
 <h3>What's inside </h3>
 <p>There are many buildings inside your city,a watchtower and the city wall that need upgraded to level </p>
 
-<img src="/images/citylayout.PNG" alt="">
+<img src="images/citylayout.PNG" alt="">
 </div>
 <div>
     <ol>City Hall-The City Hall is the central building in the city, it determines the maximum level of all structures.</ol>
