--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
    
-    <div class="sidetoside">
+    <div class="imagecenter">
         <div class="column">
         <img src="images/barb1.jpeg" width="1000px">
       
