--- a/rise2.html
+++ b/rise2.html
@@ -27,22 +27,27 @@
 
         <img src="images/civilizations.jpeg"alt="game image">
         <br><br>
-        <body>
-            <div>
-                <li>Rome-The glory of the Empire</li> 
+     
+       <div class="imagecenter">
+<div>
+<li>Rome-The glory of the Empire</li> 
                 <li>Germany - Eagle of Germany </li>
                 <li>Britain - The sun Never Sets</li>
                 <li>France - Chivalry</li>
                 <li>Vikings - Blessing of Odin</li>
                 <li>China - Art of War</li>
+</div>
+<div>
                 <li>Korea -Balance of Yin and Yang</li>
                 <li>Japan - Bushido</li>
                 <li>Spain - Fearless Fighters</li>
                 <li>Arabia -Boundless Oasis</li>
                 <li>Byzantium - heavenly Light</li>
                 <li>Ottoman Empire -  Realm of the King</li>
+</div>
+</div>
 
-        <li>lastly you will choose a kingdom </li>
+        <p>lastly you will choose a kingdom </p>
         <h3>The kingdom </h3>
         <p>This is where you will migrate to , once you have chosen you kingdom your city will teleport into your new home .This is where you will find friends and foe </p>
         <br>
